# Conway-Game-of-Life-SDL-C

./: CMakeLists.txt  Makefile  README.md  ReadMe.txt  game.c  game.h  history.txt  init_game.c  init_game.h  init_game_byclick.c  initial.txt  main.c  play_game.c  play_game.h  utility.c  view_game.c  view_game.h
test/: CMakeLists.txt  init_game.c  init_game.h  main.c  play_game.c  unit_test.c
